# src/modules/users/dtos/confirm-user-response.dto.ts
@@ -1,0 +1,14 @@
+import { ApiProperty } from '@nestjs/swagger';
+
+export class ConfirmUserResponseDto {
+  @ApiProperty()
+  isCorrect: boolean;
+
+  @ApiProperty({ type: String, nullable: true })
+  discordId: string | null;
+
+  constructor(result: { isCorrect: boolean; discordId: string | null }) {
+    this.isCorrect = result.isCorrect;
+    this.discordId = result.discordId;
+  }
+}
