# src/modules/users/dtos/confirm-user.dto.ts
@@ -1,0 +1,9 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { IsString, Length } from 'class-validator';
+
+export class ConfirmUserDto {
+  @ApiProperty({ minLength: 1, maxLength: 255, example: 'secret-password' })
+  @IsString()
+  @Length(1, 255)
+  password!: string;
+}
