# src/modules/users/dtos/create-user.dto.ts
@@ -1,5 +1,5 @@
 import { ApiProperty } from '@nestjs/swagger';
-import { IsNumberString, IsString, Length } from 'class-validator';
+import { IsNumberString, IsOptional, IsString, Length } from 'class-validator';
 
 export class CreateUserDto {
   @ApiProperty({ example: '123456789012345678' })
@@ -10,4 +10,16 @@ export class CreateUserDto {
   @IsString()
   @Length(1, 25)
   username!: string;
+
+  @ApiProperty({
+    type: String,
+    required: false,
+    nullable: true,
+    minLength: 1,
+    maxLength: 255,
+  })
+  @IsOptional()
+  @IsString()
+  @Length(1, 255)
+  password?: string | null;
 }
