# src/modules/users/dtos/list-users-query.dto.ts
@@ -1,0 +1,11 @@
+import { ApiPropertyOptional } from '@nestjs/swagger';
+import { IsOptional, IsString, Length } from 'class-validator';
+import { PagePaginationQueryDto } from '../../../common/pagination/dtos/page-pagination-query.dto';
+
+export class ListUsersQueryDto extends PagePaginationQueryDto {
+  @ApiPropertyOptional({ minLength: 1, maxLength: 25, example: 'Alice' })
+  @IsOptional()
+  @IsString()
+  @Length(1, 25)
+  username?: string;
+}
